Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-17675

[C++] Null pointer dereference in Substrait.BasicPlanRoundTripping

    XMLWordPrintableJSON

Details

    Description

      [ RUN      ] Substrait.BasicPlanRoundTripping
      file_path_str /tmp/substrait-tempdir-3pvz0v47/
      /arrow/cpp/src/arrow/dataset/file_base.cc:97:19: runtime error: member call on null pointer of type 'arrow::Buffer'
          #0 0x7fba39909ef1 in arrow::dataset::FileSource::Equals(arrow::dataset::FileSource const&) const /arrow/cpp/src/arrow/dataset/file_base.cc:97:19
          #1 0x7fba3990f1ed in arrow::dataset::FileFragment::Equals(arrow::dataset::FileFragment const&) const /arrow/cpp/src/arrow/dataset/file_base.cc:147:18
          #2 0x76e22c in arrow::engine::Substrait_BasicPlanRoundTripping_Test::TestBody() /arrow/cpp/src/arrow/engine/substrait/serde_test.cc:1977:5
          #3 0x7fba3c92fa9a in void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2607:10
          #4 0x7fba3c915759 in void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2643:14
          #5 0x7fba3c8ef652 in testing::Test::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2682:5
          #6 0x7fba3c8f0418 in testing::TestInfo::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2861:11
          #7 0x7fba3c8f0c33 in testing::TestSuite::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:3015:28
          #8 0x7fba3c901a14 in testing::internal::UnitTestImpl::RunAllTests() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:5855:44
          #9 0x7fba3c93289a in bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2607:10
          #10 0x7fba3c917f79 in bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2643:14
          #11 0x7fba3c901570 in testing::UnitTest::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:5438:10
          #12 0x7fba3c968210 in RUN_ALL_TESTS() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/include/gtest/gtest.h:2490:46
          #13 0x7fba3c9681ec in main /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest_main.cc:52:10
          #14 0x7fba1b6f8082 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x24082)
          #15 0x4d4b2d in _start (/build/cpp/debug/arrow-substrait-substrait-test+0x4d4b2d)
      
      SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior /arrow/cpp/src/arrow/dataset/file_base.cc:97:19 in
      /build/cpp/src/arrow/engine
      

      https://github.com/apache/arrow/runs/8274057341?check_suite_focus=true

      Attachments

        Issue Links

          Activity

            People

              westonpace Weston Pace
              lidavidm David Li
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h
                  1h