ARROW-17675: [C++] Modified the FileSource::Equals method to handle the case where buffer_ is null (#14085)

Authored-by: Weston Pace <weston.pace@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>